[modify] cors 설정 local로 변경