@@ -26,6 +26,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.CorsUtils;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -71,7 +72,7 @@ public class SecurityConfig {
             config.setMaxAge(3600L);
             //프론트로 헤더를 보내줄 때 Authorization 도 허용해줘야함
             config.setExposedHeaders(Collections.singletonList("Authorization"));
-            config.setAllowedOriginPatterns(List.of("https://bookleum.net","http://localhost:3000")); // ⭐️ 허용할 origin
+            config.setAllowedOriginPatterns(Arrays.asList("https://bookleum.net","http://localhost:3000", "http://220.120.143.96:7070")); // ⭐️ 허용할 origin
             config.setAllowCredentials(true);
             return config;
         };
